# STRiDE

./: LICENSE  README.md  environment.yml  pyproject.toml
data/msi_sites/: msi_sites_170.txt
scripts/: stride_features.py  stride_predict.py  stride_run.py
src/stride/: __init__.py  feature_generator.py  pipeline.py  predictor.py  utils.py
