[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stride"
version = "0.1.0"
description = "STRiDE MSI calling pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "pysam",
  "scikit-learn",
  "joblib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
